Started routes for shopping list collection
