# project-02/routes/index.js
@@ -2,6 +2,7 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/recipes', require('./recipes'));
-router.use('/api-doc', require('./swagger'))
+router.use('/shopping-list', require('./shopping-list'))
+router.use('/api-doc', require('./swagger'));
 
 module.exports = router;
