# project-02/routes/shopping-list.js
@@ -1,0 +1,9 @@
+const express = require('express');
+const cors = require('cors');
+const router = express.Router();
+
+const shoppingListController = require('../controllers/shopping-list')
+
+router.use(cors())
+
+router.get('/', shoppingListController.getAll)
